--- a/client/src/components/Portfolio/portfolio.scss
+++ b/client/src/components/Portfolio/portfolio.scss
@@ -37,7 +37,6 @@
   .view .mask,
   .view .content {
     width: 100%;
-    height: 100%;
     position: absolute;
     overflow: hidden;
     top: 0;
@@ -51,8 +50,8 @@
   .view img {
     display: block;
     position: relative;
-    height: 15em;
-    width: auto;
+    height: 100%;
+    width: 100%;
   }
 
   .view h2 {
@@ -185,24 +184,28 @@
 
   .view {
     align-self: center;
+
+    img {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
 //tablets
 @media only screen and (min-width: 670px) and (max-width: 960px) {
   .portfolio {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 50% 50%;
     padding-bottom: 1em;
     justify-items: center;
 
     .view {
       text-align: center;
-      width: 10em;
       justify-items: center;
 
       img {
-        height: 9em;
-        width: auto;
+        height: 100%;
+        width: 100%;
       }
     }
   }
@@ -211,17 +214,22 @@
 //desktops
 @media only screen and (min-width: 961px) {
   .portfolio-container {
-    padding-left: 3em;
-    padding-right: 3em;
+    padding-left: 2.5em;
+    padding-right: 2.5em;
     padding-bottom: 2em;
   }
   .portfolio {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 50% 50%;
   }
 
   .view {
     justify-self: center;
     justify-items: center;
+
+    img {
+      height: 100%;
+      width: 100%;
+    }
   }
 }
