--- a/client/src/components/About/about.scss
+++ b/client/src/components/About/about.scss
@@ -50,6 +50,15 @@
   }
 }
 
+.polaroid-parent {
+  .polaroid {
+    p {
+      font-family: "Montserrat", sans-serif, "Roboto";
+      font-weight: bold;
+    }
+  }
+}
+
 //phones
 @media only screen and (max-width: 425px) {
   .aboutMe {
@@ -106,7 +115,6 @@
       text-align: center;
       width: 100%;
       bottom: 0px;
-      font-family: Courier New;
       text-transform: uppercase;
       color: #888;
       padding-bottom: 15px;
@@ -203,7 +211,6 @@
     text-align: center;
     width: 100%;
     bottom: 0px;
-    font-family: Courier New;
     text-transform: uppercase;
     color: #888;
     padding-bottom: 15px;
@@ -286,7 +293,6 @@
     text-align: center;
     width: 100%;
     bottom: 0px;
-    font-family: Courier New;
     text-transform: uppercase;
     color: #888;
     padding-bottom: 15px;
