--- a/client/src/components/Skills/skills.scss
+++ b/client/src/components/Skills/skills.scss
@@ -77,9 +77,10 @@
 
 .more-skills-header {
   h1 {
-    font-size: 1.6em;
     text-align: center;
     padding-top: 0.4em;
+    font-size: 1.6em;
+    letter-spacing: 0.5em;
   }
 }
 
