--- a/client/src/components/Navigation/navigation.scss
+++ b/client/src/components/Navigation/navigation.scss
@@ -22,7 +22,8 @@
 .container a {
   color: #282828;
   text-decoration: none;
-  font: 20px Raleway;
+  font-family: "Montserrat", sans-serif, "Roboto";
+  font-weight: bold;
   margin: 0px 10px;
   padding: 10px 10px;
   position: relative;
@@ -75,7 +76,7 @@
   }
 
   .container a {
-    font-size: 1.2em;
+    font-size: 1.1em;
     padding: 3px;
   }
 
